Seperate generated classes into files.

--- a/GForum/GForum.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/GForum/GForum.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ExternalLoginConfirmationViewModel
+﻿@model GForum.Models.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
