--- a/GForum/GForum.Web/Views/Account/Register.cshtml
+++ b/GForum/GForum.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.RegisterViewModel
+﻿@model GForum.Models.AccountViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
