--- a/GForum/GForum.Web/Views/Account/ResetPassword.cshtml
+++ b/GForum/GForum.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ResetPasswordViewModel
+﻿@model GForum.Models.AccountViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
