--- a/GForum/GForum.Web/Views/Account/SendCode.cshtml
+++ b/GForum/GForum.Web/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.SendCodeViewModel
+﻿@model GForum.Models.AccountViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
