--- a/GForum/GForum.Web/Views/Account/VerifyCode.cshtml
+++ b/GForum/GForum.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.VerifyCodeViewModel
+﻿@model GForum.Models.AccountViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
