--- a/GForum/GForum.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/GForum/GForum.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ExternalLoginListViewModel
+﻿@model GForum.Models.AccountViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
