--- a/GForum/GForum.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/GForum/GForum.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.AddPhoneNumberViewModel
+﻿@model GForum.Models.ManageViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
