--- a/GForum/GForum.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/GForum/GForum.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.VerifyPhoneNumberViewModel
+﻿@model GForum.Models.ManageViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
