--- a/GForum/GForum.Web/Views/Account/ForgotPassword.cshtml
+++ b/GForum/GForum.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ForgotPasswordViewModel
+﻿@model GForum.Models.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
