--- a/GForum/GForum.Web/Views/Manage/ManageLogins.cshtml
+++ b/GForum/GForum.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ManageLoginsViewModel
+﻿@model GForum.Models.ManageViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
