--- a/GForum/GForum.Web/Views/Manage/SetPassword.cshtml
+++ b/GForum/GForum.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.SetPasswordViewModel
+﻿@model GForum.Models.ManageViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
