--- a/GForum/GForum.Web/Views/Manage/ChangePassword.cshtml
+++ b/GForum/GForum.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ManageViewModels.ChangePasswordViewModel
+﻿@model GForum.Web.Models.Manage.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
