--- a/GForum/GForum.Web/Views/Manage/Index.cshtml
+++ b/GForum/GForum.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model GForum.Models.ManageViewModels.IndexViewModel
+﻿@model GForum.Web.Models.Manage.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
