--- a/GForum/GForum.Web/Views/Account/Login.cshtml
+++ b/GForum/GForum.Web/Views/Account/Login.cshtml
@@ -1,18 +1,17 @@
-﻿@using GForum.Models.AccountViewModels
-@model LoginViewModel
+﻿@model GForum.Web.Models.Account.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
+        <h2>@ViewBag.Title.</h2>
+        <h4>Use a local account to log in.</h4>
+        <hr />
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -49,6 +48,6 @@
     </div>
 </div>
 
-@section Scripts {
+@section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
 }
