--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -1,30 +1,36 @@
 ﻿body {
     padding-top: 75px;
     padding-bottom: 25px;
+    background-color: ghostwhite;
+    overflow-y: scroll;
 }
 
-/* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
 .dl-horizontal dt {
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
 .user-navabar-avatar {
-    width: 40px;
-    margin: 5px auto;
+    width: 35px;
+    margin: 7.5px auto;
     border-radius: 50%;
 }
+
+.category {
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: white;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+}
+
+    .category .title {
+        font-weight: bold;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
