--- a/GForum/GForum.Web/Views/Shared/_Layout.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="text-center">
+        <footer class="text-muted">
             <p>&copy; @DateTime.Now.Year - GForum</p>
         </footer>
     </div>
