--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -27,8 +27,10 @@
     border: 1px solid #dddddd;
     border-radius: 4px;
 }
-
     .category .title {
+        display: inline-block;
+        width: 100%;
+        font-size: large;
         font-weight: bold;
         overflow: hidden;
         text-overflow: ellipsis;
