--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -36,3 +36,10 @@
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+
+.profile-picture {
+    border-radius: 50%;
+}
+.profile-details {
+    padding: 0 40px;
+}
