--- a/GForum/GForum.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,10 @@
         )" />
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink($"Hello {User.Identity.GetUserName()}!", "Index", "Manage")
+                @Html.ActionLink(
+                    $"Hello {User.Identity.GetUserName()}!",
+                    "Index", "Users", new { username = User.Identity.GetUserName() }, null
+               )
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
