--- a/GForum/GForum.Web/Views/Account/Login.cshtml
+++ b/GForum/GForum.Web/Views/Account/Login.cshtml
@@ -5,8 +5,8 @@
 
 <div class="row">
     <div class="col-md-8">
-        <h2>@ViewBag.Title.</h2>
-        <h4>Use a local account to log in.</h4>
+        <h2>@ViewBag.Title</h2>
+        <h4 class="text-muted">Use a local account to log in</h4>
         <hr />
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
