--- a/GForum/GForum.Web/Views/Account/Register.cshtml
+++ b/GForum/GForum.Web/Views/Account/Register.cshtml
@@ -5,8 +5,8 @@
 
 <div class="row">
     <div class="col-md-8">
-        <h2>@ViewBag.Title.</h2>
-        <h4>Create a new account.</h4>
+        <h2>@ViewBag.Title</h2>
+        <h4 class="text-muted">Create a new account</h4>
         <hr />
         <section id="registerForm">
             @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
