--- a/GForum/GForum.Web/Views/Manage/ChangeEmail.cshtml
+++ b/GForum/GForum.Web/Views/Manage/ChangeEmail.cshtml
@@ -3,12 +3,11 @@
     ViewBag.Title = "Change email";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ChangeEmail", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Email Form</h4>
     <hr />
     @Html.ValidationSummary(string.Empty, new { @class = "text-danger" })
     <div class="form-group">
