--- a/GForum/GForum.Web/Views/Users/Index.cshtml
+++ b/GForum/GForum.Web/Views/Users/Index.cshtml
@@ -7,19 +7,21 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="pull-left">
-            <img class="profile-picture" src="" />
+            @Html.GravatarImage(Model.Email, size: 200, cssClass: "profile-picture")
         </div>
         <div class="profile-details pull-left">
             <h3><strong>@Model.UserName</strong>'s profile</h3>
-            <h4>@Model.Email</h4>
-            <h4>@("post".ToQuantity(Model.PostsCount))</h4>
-            <h4>@("category".ToQuantity(Model.CategoriesCount))</h4>
-            @if (User.Identity.GetUserId() == Model.Id)
-            {
-                @Html.ActionLink("Manage account", "Index", "Manage", null,
-                    new { @class = "btn btn-block btn-default" }
-                )
-            }
+            <section class="text-muted">
+                <h4>@(Model.Email ?? "No email provied.")</h4>
+                <h4>Member since @Model.CreatedOn.Humanize(dateToCompareAgainst: DateTime.Now).</h4>
+                <h4>Has created @("post".ToQuantity(Model.PostsCount)) and @("category".ToQuantity(Model.CategoriesCount)).</h4>
+                @if (User.Identity.GetUserId() == Model.Id)
+                {
+                    @Html.ActionLink("Manage account", "Index", "Manage", null,
+                        new { @class = "btn btn-block btn-default" }
+                    )
+                }
+            </section>
         </div>
     </div>
 </div>
