--- a/GForum/GForum.Web/Views/Forum/Post.cshtml
+++ b/GForum/GForum.Web/Views/Forum/Post.cshtml
@@ -1,8 +1,6 @@
-﻿@using MarkdownSharp
-@model GForum.Data.Models.Post
+﻿@model GForum.Web.Models.Forum.PostViewModel
 @{
     ViewBag.Title = "Post";
-    var md = new Markdown();
 }
 
 <div class="row">
