--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -21,7 +21,7 @@
 }
 
 .card {
-    padding: 20px;
+    padding: 10px 20px;
     margin-bottom: 20px;
     background-color: white;
     border: 1px solid #dddddd;
