--- a/GForum/GForum.Web/Views/Users/Index.cshtml
+++ b/GForum/GForum.Web/Views/Users/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model GForum.Web.Models.Users.IndexViewModel
+@model GForum.Web.Models.Users.UserViewModel
 @{
     ViewBag.Title = "Index";
 }
