Add post submission view.

--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -5,6 +5,16 @@
     overflow-y: scroll;
 }
 
+textarea {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 150px;
+}
+
+.form-control {
+    margin-bottom: 15px;
+}
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
@@ -28,21 +38,23 @@
     border-radius: 4px;
     overflow: hidden;
 }
+
     .card .title-one-line {
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
     }
+
     .card .content {
         font-size: 1em;
         border: 1px solid #024;
         border-radius: 5px;
         padding: 15px;
     }
-    .card .content p {
-        margin: 5px 0;
-    }
 
+        .card .content p {
+            margin: 5px 0;
+        }
 
 .profile-picture {
     border-radius: 50%;
@@ -51,3 +63,25 @@
 .profile-details {
     padding: 0 40px;
 }
+
+.md-help {
+    overflow: auto;
+}
+
+    .md-help td {
+        border: 1px solid gray;
+        padding: 5px;
+    }
+
+    .md-help p {
+        text-align: center;
+    }
+
+    .md-help table {
+        margin: 0 auto;
+    }
+
+    .md-help .title {
+        background-color: aliceblue;
+        text-align: center;
+    }
