--- a/GForum/GForum.Web/Views/Forum/Post.cshtml
+++ b/GForum/GForum.Web/Views/Forum/Post.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-10">
         <div class="card">
             <h2 class="title">@Model.Title</h2>
             <p class="text-muted">
@@ -17,5 +17,13 @@
                 @Html.MarkdownToHtml(Model.Content)
             </div>
         </div>
+    </div>
+    <div class="col-xs-2">
+        @Html.ActionLink(
+            "Submit a new post",
+            "Submit",
+            new { catgeoryId = Model.CategoryId },
+            new { @class = "btn btn-primary" }
+        )
     </div>
 </div>
