Update submit view model.

--- a/GForum/GForum.Web/Views/Account/Register.cshtml
+++ b/GForum/GForum.Web/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
         <h4 class="text-muted">Create a new account</h4>
         <hr />
         <section id="registerForm">
-            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary("", new { @class = "text-danger" })
