--- a/GForum/GForum.Web/Views/Account/Login.cshtml
+++ b/GForum/GForum.Web/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
         <h4 class="text-muted">Use a local account to log in</h4>
         <hr />
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -29,10 +29,8 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-3 col-md-9">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe, htmlAttributes: new { @checked = true })
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
+                        @Html.CheckBoxFor(m => m.RememberMe, htmlAttributes: new { @checked = true })
+                        @Html.LabelFor(m => m.RememberMe)
                     </div>
                 </div>
                 <div class="form-group">
@@ -40,11 +38,9 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-                <div class="form-group">
-                    <p class="col-md-offset-3 col-md-9">
-                        @Html.ActionLink("Register as a new user", "Register")
-                    </p>
-                </div>
+                <p class="col-md-offset-3 col-md-9">
+                    @Html.ActionLink("Register as a new user", "Register")
+                </p>
             }
         </section>
     </div>
