--- a/GForum/GForum.Web/Views/Forum/Submit.cshtml
+++ b/GForum/GForum.Web/Views/Forum/Submit.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <h2 class="title text-center">@ViewBag.Title</h2>
-                @using (Html.BeginForm("Submit", "Forum", FormMethod.Post))
+                @using (Html.BeginForm("Submit", "Forum", FormMethod.Post, new { @class = "form-horizontal" }))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -16,12 +16,14 @@
                         @Html.LabelFor(m => m.Title, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
                             @Html.EditorFor(m => m.Title, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.Content, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
                             @Html.EditorFor(m => m.Content, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
