Add upvote/downvote ui.

--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -81,3 +81,10 @@ textarea {
         background-color: aliceblue;
         text-align: center;
     }
+
+button.glyphicon {
+    background: transparent;
+    border: none;
+    padding: 0;
+    font-size: 20px;
+}
