--- a/GForum/GForum.Web/Views/Forum/Post.cshtml
+++ b/GForum/GForum.Web/Views/Forum/Post.cshtml
@@ -6,15 +6,24 @@
 <div class="row">
     <div class="col-xs-10">
         <div class="card">
-            <h2 class="title">@Model.Title</h2>
-            <p class="text-muted">
-                Submitted by
-                @Html.ActionLink(Model.Author.UserName, "Index", "Users", new { username = Model.Author.UserName }, null)
-                @Model.CreatedOn.Humanize(dateToCompareAgainst: DateTime.Now)
-            </p>
-
-            <div class="content">
-                @Html.MarkdownToHtml(Model.Content)
+            <div style="float:left;height:40px;width:15px;padding-top: 20px">
+                @using (Ajax.BeginForm("Vote", new { postId = Model.Id, voteType = "Upvote" }, null))
+                {
+                    <button class="glyphicon glyphicon-arrow-up"></button>
+                }
+                @using (Ajax.BeginForm("Vote", new { postId = Model.Id, voteType = "Downvote" }, null))
+                {
+                    <button class="glyphicon glyphicon-arrow-down"></button>
+                }
+            </div>
+            <div style="margin-left:35px">
+                <h2 class="title">@Model.Title</h2>
+                <p class="text-muted">
+                    Submitted by
+                    @Html.ActionLink(Model.Author.UserName, "Index", "Users", new { username = Model.Author.UserName }, null)
+                    @Model.CreatedOn.Humanize(dateToCompareAgainst: DateTime.Now)
+                </p>
+                <div class="content">@Html.MarkdownToHtml(Model.Content)</div>
             </div>
         </div>
     </div>
