--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿/*Globals*/
+body {
     padding-top: 75px;
     padding-bottom: 25px;
     background-color: ghostwhite;
@@ -27,7 +28,7 @@ textarea {
 }
 
 .card {
-    padding: 10px 20px;
+    padding: 20px;
     margin-bottom: 20px;
     background-color: white;
     border: 1px solid #dddddd;
@@ -52,6 +53,7 @@ textarea {
             margin: 5px 0;
         }
 
+/*User profile*/
 .profile-picture {
     border-radius: 50%;
 }
@@ -60,6 +62,7 @@ textarea {
     padding: 0 40px;
 }
 
+/*Post submit*/
 .md-help {
     overflow: auto;
 }
@@ -82,9 +85,25 @@ textarea {
         text-align: center;
     }
 
-button.glyphicon {
-    background: transparent;
-    border: none;
-    padding: 0;
+/*Votes*/
+.vote-container {
+    float: left;
+    width: 20px;
+}
+
+.vote-btn {
     font-size: 20px;
+    cursor: pointer;
+    color: #777;
+}
+
+    .vote-btn.active {
+        color: #337ab7;
+    }
+
+.vote-count {
+    width: 40px;
+    height: 20px;
+    margin-left: -10px;
+    text-align: center;
 }
