--- a/GForum/GForum.Web/Views/Forum/Category.cshtml
+++ b/GForum/GForum.Web/Views/Forum/Category.cshtml
@@ -11,19 +11,22 @@
         @foreach (var post in Model.Posts)
         {
             <div class="card">
-                <h4 class="title-one-line">
-                    @Html.ActionLink(post.Title, "Post", "Forum", new { id = post.Id }, null)
-                </h4>
-                <p class="text-muted">
-                    Submitted by
-                    @Html.ActionLink(
+                @Html.Partial("_VotesPartial", post)
+                <div style="margin-left:40px">
+                    <h4 class="title-one-line">
+                        @Html.ActionLink(post.Title, "Post", "Forum", new { id = post.Id }, null)
+                    </h4>
+                    <p class="text-muted">
+                        Submitted by
+                        @Html.ActionLink(
                         post.Author.UserName,
                         "Index",
                         "Users",
                         new { username = post.Author.UserName }, null
                     )
-                    @post.CreatedOn.Humanize(dateToCompareAgainst: DateTime.Now)
-                </p>
+                        @post.CreatedOn.Humanize(dateToCompareAgainst: DateTime.Now)
+                    </p>
+                </div>
             </div>
         }
     </div>
@@ -36,3 +39,7 @@
         )
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/Scripts/Site/votes-controller.js"></script>
+}
