--- a/GForum/GForum.Web/Views/Forum/Post.cshtml
+++ b/GForum/GForum.Web/Views/Forum/Post.cshtml
@@ -6,17 +6,8 @@
 <div class="row">
     <div class="col-xs-10">
         <div class="card">
-            <div style="float:left;height:40px;width:15px;padding-top: 20px">
-                @using (Ajax.BeginForm("Vote", new { postId = Model.Id, voteType = "Upvote" }, null))
-                {
-                    <button class="glyphicon glyphicon-arrow-up"></button>
-                }
-                @using (Ajax.BeginForm("Vote", new { postId = Model.Id, voteType = "Downvote" }, null))
-                {
-                    <button class="glyphicon glyphicon-arrow-down"></button>
-                }
-            </div>
-            <div style="margin-left:35px">
+            @Html.Partial("_VotesPartial", Model)
+            <div style="margin-left:40px">
                 <h2 class="title">@Model.Title</h2>
                 <p class="text-muted">
                     Submitted by
@@ -36,3 +27,7 @@
         )
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/Scripts/Site/votes-controller.js"></script>
+}
