--- a/GForum/GForum.Web/Views/Posts/Submit.cshtml
+++ b/GForum/GForum.Web/Views/Posts/Submit.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GForum.Web.Models.Forum.PostSubmitViewModel
 @{
-    ViewBag.Title = $"Submitting to {Model.CategoryTitle}";
+    ViewBag.Title = $"Submit";
 }
 
 <div class="col-xs-12">
     <div class="card">
         <div class="row">
             <div class="col-sm-6">
-                <h2 class="title text-center">@ViewBag.Title</h2>
-                @using (Html.BeginForm("Submit", "Forum", FormMethod.Post, new { @class = "form-horizontal" }))
+                <h2 class="title text-center">Submit to <strong>@Model.CategoryTitle</strong></h2>
+                @using (Html.BeginForm("Submit", "Posts", FormMethod.Post, new { @class = "form-horizontal" }))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
