--- a/GForum/GForum.Web/Views/Categories/Category.cshtml
+++ b/GForum/GForum.Web/Views/Categories/Category.cshtml
@@ -14,13 +14,13 @@
                 @Html.Partial("_VotesPartial", post)
                 <div style="margin-left:40px">
                     <h4 class="title-one-line">
-                        @Html.ActionLink(post.Title, "Post", "Forum", new { id = post.Id }, null)
+                        @Html.ActionLink(post.Title, "Post", "Posts", new { id = post.Id }, null)
                     </h4>
                     <p class="text-muted">
                         Submitted by
                         @Html.ActionLink(
                         post.Author.UserName,
-                        "Index",
+                        "Profile",
                         "Users",
                         new { username = post.Author.UserName }, null
                     )
@@ -31,9 +31,7 @@
         }
     </div>
     <div class="col-xs-2">
-        @Html.ActionLink(
-            "Submit a new post",
-            "Submit",
+        @Html.ActionLink("Submit a new post", "Submit", "Posts", 
             new { catgeoryId = Model.Id },
             new { @class = "btn btn-primary" }
         )
