--- a/GForum/GForum.Web/Views/Categories/Index.cshtml
+++ b/GForum/GForum.Web/Views/Categories/Index.cshtml
@@ -12,10 +12,10 @@
         @foreach (var category in Model)
         {
             <div class="card">
-                <h4 class="title-one-line">@Html.ActionLink(category.Title, "Category", "Forum", new { id = category.Id }, null)</h4>
+                <h4 class="title-one-line">@Html.ActionLink(category.Title, "Category", "Categories", new { id = category.Id }, null)</h4>
                 <p class="text-muted">
                     Created by
-                    @Html.ActionLink(category.Author.UserName, "Index", "Users", new { username = category.Author.UserName }, null)
+                    @Html.ActionLink(category.Author.UserName, "Profile", "Users", new { username = category.Author.UserName }, null)
                     @category.CreatedOn.Humanize(dateToCompareAgainst: DateTime.Now)
                     <span>&bull;</span>
                     @("post".ToQuantity(category.PostsCount))
