--- a/GForum/GForum.Web/Views/Shared/_Layout.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_Layout.cshtml
@@ -22,9 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Browse Categories", "Index", "Categories")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-
-                    <li>@Html.ActionLink("Forum", "Index", "Forum")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
