--- a/GForum/GForum.Web/Content/Styles/Site.css
+++ b/GForum/GForum.Web/Content/Styles/Site.css
@@ -29,8 +29,8 @@ textarea {
 
 /*Forum*/
 .card {
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 15px 20px;
+    margin-bottom: 15px;
     background-color: white;
     border: 1px solid #dddddd;
     border-radius: 4px;
