Add azure config.

--- a/GForum/GForum.Web/Views/Shared/_Layout.cshtml
+++ b/GForum/GForum.Web/Views/Shared/_Layout.cshtml
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - GForum</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/Styles/all")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
